<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/page_home" />

    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/ic_wallet_24"
        android:title="@string/page_wallet" />

    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore_24"
        android:title="@string/page_explore" />

    <item
        android:id="@+id/nav_memories"
        android:icon="@drawable/ic_memories_24"
        android:title="@string/page_memories" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_24"
        android:title="@string/settings_title" />
</menu>
